deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapptest
spec:
  selector:
    matchLabels:
      app: webapptest
  template:
    metadata:
      labels:
        app: webapptest
    spec:
      containers:
      - name: webapptest
        image: laxmanperi/webapp
        command: ["/bin/sh"]
        args: ["-c","sh /usr/local/tomcat/bin/startup.sh;while true; do echo hello; sleep 10;done"]
        ports:
            - name: http
              containerPort: 8080
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: webapptest-service
  labels:
    app: webapptest
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    #nodePort: 31884
    protocol: TCP
    name: http
  selector:
    app: webapptest
