mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: webapptest
spec:
  type: ExternalName
  externalName: terraform-20210825185705279200000001.cntaerqcvi4z.us-east-1.rds.amazonaws.com
